tests/integration/seed/predictions/invalid/zone+classif2.jsonlines
{"uuid":"12345","annotations":{"FOO":{"labels":[{"value":"passeport","proba":0.999}]},"bboxes":{"entities":[{"value":"bbox_name","coords":[{"x":0.2303902930293,"y":0.2039203923},{"x":0.2303902930293,"y":0.2039203923},{"x":0.2303902930293,"y":0.2039203923}]}]}}}